--- a/qutebrowser/autoconfig.yml
+++ b/qutebrowser/autoconfig.yml
@@ -12,3 +12,4 @@ settings:
     global: dark
   content.javascript.clipboard:
     https://chatgpt.com: access-paste
+    https://github.com: access-paste
