--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -15,7 +15,11 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,1.33
+monitor=eDP-1,2560x1600@165,0x0,1.6
+monitor=HDMI-A-2,2560x1440@60,1600x0,1.6
+
+workspace=1,monitor:eDP-1
+workspace=2,monitor:HDMI-A-2
 
 
 ###################
@@ -52,6 +56,9 @@ exec-once = waybar & hyprpaper
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
 
 
 ###################
@@ -202,7 +209,9 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+		accel_profile = flat
+
+    sensitivity = 0.0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = false
