removed much functionallity for syncing with other computer, as this is now intended just for upkeep on one computer

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,20 @@
-.git/
-Electron/
-dconf/
-discord/
-go/
-pulse/
-gh/hosts.yml
-session/
-unity3d/
-hypr/hyprland.conf
+*
+
+!foot/
+!foot/**
+
+!hypr/
+!hypr/**
+
+!nvim/
+!nvim/**
+
+!waybar/
+!waybar/**
+
+!wofi/
+!wofi/**
+
+!.zshrc-copy
+!.pacconf
+!.gitignore
