--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,6 @@
-preload = ~/walls/disco-wallpaper.jpg
 wallpaper = ,~/walls/disco-wallpaper.jpg
+
+wallpaper {
+	monitor = eDP-1
+	path = ~/walls/disco-wallpaper.jpg
+}
