--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,7 +14,7 @@ monitor=,preferred,auto,1.33
 # Set programs that you use
 $terminal = foot
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = bemenu-run
 
 #################
 ### AUTOSTART ###
@@ -23,9 +23,7 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-$reload_waybar = pkill waybar; waybar &
-
-exec-once = waybar & hyprpaper
+exec-once = hyprpaper
 
 
 #############################
@@ -167,7 +165,6 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, U, togglesplit, # dwindle
-bind = $mainMod, R, exec, $reload_waybar,
 bind = $mainMod, F, fullscreen
 
 # Move focus with mainMod + h,j,k,l keys
